# db-api

./: .gitignore  BADGES.md  CHANGES  CHANGES-1.0.4-1  DEV.Notes.20210422.txt  Dockerfile  LICENSE  README.md  TODO  app.py  db.py  main.py  requirements.txt  setup.cfg  setup.py  v1.py  wsgi.py
Notes/: DEMO.1.0.txt  DEV.Notes.20210423.txt  DEV.Notes.20210426.txt  DEV.Notes.20210427.txt  DEV.Notes.20210428.txt  DEV.Notes.20210429.txt  DEV.Notes.20210911.txt  Dev.Notes.query.101s.txt  Dev.Notes.txt  Error.pypi.versions.txt  Notes.Object_of_type_Decimal_is_not_JSON_serializable.txt  Notes.Object_of_type_bytes_is_not_JSON_serializable.txt  Notes.form.post.txt  client1.bash  client2.bash  client2.py  client2.py-t1  client3.bash  client3.bash-t1  client5.bash  db-api.service  known.issue.txt  qa.ubuntu20.txt  run.gunicorn  run.virtualenv
Notes/t/: DEV.Notes.20210423.txt  DEV.Notes.20210427.txt  DEV.Notes.20210428.txt  DEV.Notes.20210430.txt  client1.py  client2.bash-t1
clients/: README.md
clients/GoogleSheets/: Code.gs  README.md
clients/Java/: README.md  ShowDataBases.java
clients/JavaScript/: README.md  index.html  inventory.html
clients/React/: README.md
clients/ReactJS/: README.md
clients/curl/: curl.delete_3  curl.post_json  dbapi.sh
golang/: README.md  go.mod  go.sum  server.go  server_test.go
html/: browser.html  dbbrowser.html  form.html  index.html
support-files/: db-api.service  put_json.py  run.virtualenv
tests/: bandit  curl.post.sh  flake8  pep257  pylint  qa2.py  vulture
tools/: inventory.html  mk.dbbrowser.html.sh  put_json.py
(+63 files in other folders)
