
[metadata]
name = db-api-server-pkg-krink
version = 1.0.6
author = K
author_email = k@rink.us
description = db-api-server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/krink/db-api-server
project_urls =
    Bug Tracker = https://gitlab.com/krink/db-api-server/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Database :: Database Engines/Servers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src


